--- a/public/template-html/giaovien-dropdown.html
+++ b/public/template-html/giaovien-dropdown.html
@@ -11,5 +11,5 @@
     <a class="dropdown-item" href="/rent-book-list">Sách đang mượn</a>
     <a class="dropdown-item" href="/carts">Giỏ sách</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="/login">Đăng xuất</a>
+    <a class="dropdown-item" href="/login" onclick="trigger_logout()">Đăng xuất</a>
 </div>
