Chỉnh sửa tiếng anh, giao diện change password và thêm href
Như tiêu đề, chỉnh trong page change password, forget pass và profile.

--- a/public/template-html/giaovien-dropdown.html
+++ b/public/template-html/giaovien-dropdown.html
@@ -4,8 +4,8 @@
 </button>
 <div class="dropdown-menu dropdown-menu-right">
     <a class="dropdown-item" href="/profile">Thông tin cá nhân</a>
-    <a class="dropdown-item" href="#">Đổi mật khẩu</a>
-    <a class="dropdown-item" href="#">Sách đang đặt</a>
+    <a class="dropdown-item" href="/change-password">Đổi mật khẩu</a>
+    <a class="dropdown-item" href="/buy-book-manager">Sách đang đặt</a>
     <a class="dropdown-item" href="/buy-book">Đăng ký mua sách</a>
     <a class="dropdown-item" href="/return-book-list">Lịch sử mượn sách</a>
     <a class="dropdown-item" href="/rent-book-list">Sách đang mượn</a>
