--- a/public/template-html/sinhvien-dropdown.html
+++ b/public/template-html/sinhvien-dropdown.html
@@ -4,7 +4,7 @@
 </button>
 <div class="dropdown-menu dropdown-menu-right">
     <a class="dropdown-item" href="/profile">Thông tin cá nhân</a>
-    <a class="dropdown-item" href="#">Đổi mật khẩu</a>
+    <a class="dropdown-item" href="/change-password">Đổi mật khẩu</a>
     <a class="dropdown-item" href="/return-book-list">Lịch sử mượn sách</a>
     <a class="dropdown-item" href="/rent-book-list">Sách đang mượn</a>
     <a class="dropdown-item" href="/carts">Giỏ sách</a>
